--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "build/app.js",
   "scripts": {
-    "prestart": "gulp build",
+    "prestart": "npm install && gulp build",
     "start": "node build/app.js",
     "local": "node build/app.js"
   },
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-typescript": "^3.1.4",
-    "merge2": "^1.0.3"
+    "merge2": "^1.0.3",
+    "typescript": "^2.1.5"
   }
 }
